fix of overflow-x on podcastpane along with great new changes to native audio controller

--- a/app/components/Podcast/PodCastPane.css
+++ b/app/components/Podcast/PodCastPane.css
@@ -4,6 +4,7 @@
 	height: calc(100% - 90px);
 
 	overflow: auto;
+	overflow-x: hidden;
 
 	background-color: #0176e5;
 
